--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,31 @@
 .desconto{
     position: absolute;
     width: 100%;
-    height: 3,71%;
+    height: 60px;
     left: 0%;
     top: 0%;
     background: #1CD1B0;
+}
+
+.pdesconto{
+    left: 20px;
+    top: 7px;
+    bottom: 5px;
+    font-family: 'roboto', sans-serif;
+    font-style: normal;
+    font-size: 15px;
+    line-height: 18px;
+    position: absolute;
+    color: black;
 }
 
 .super{
     box-sizing: border-box;
     position: absolute;
     width: 100%;
-    height: 9,86%;
+    height: 120px;
     left: 0px;
-    top: 50px;
+    top: 60px;
     background: #00669F;
     box-shadow: 0px 10px 7px rgba(0, 0, 0, 0.25);
 }
