--- a/css/style.css
+++ b/css/style.css
@@ -30,37 +30,202 @@
     box-shadow: 0px 10px 7px rgba(0, 0, 0, 0.25);
 }
 
+.psuper{
+    left: 28px;
+    top: 18px;
+    bottom: 30px;
+    position: absolute;
+    width: 224px;
+    height: 47px;
+    font-family: 'roboto', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 39px;
+}
+
 .cards{
     position: absolute;
-    width: 834px;
-    height: 597.01px;
+    width: 860px;
+    height: 600px;
     left: 112px;
     top: 223.99px;
+    display: flex;
+    justify-content: space-around;
+}
+
+.capa{
+    position: absolute;
+    width: 374px;
+    height: 217.81px;
+    left: 0px;
+    top: 0px;
+    border-radius: 16px 16px 0px 0px;
+    z-index: 0;
+}
+
+.capa1{
+    position: absolute;
+    width: 374px;
+    height: 218px;
+    left: 0px;
+    top: 0px;
+    border-radius: 16px 16px 0px 0px;
+    z-index: 0;
+}
+
+.love{
+    position: absolute;
+    left: 15px;
+    top: 15px;
+    bottom: 6.25%;
+    z-index: 1;
+}
+
+.love1{
+    position: absolute;
+    left: 15px;
+    top: 15px;
+    bottom: 6.25%;
+    z-index: 1;
+}
+
+.perfil{
+    position: absolute;
+    width: 135.43px;
+    height: 135.43px;
+    margin-left: 125px;
+    margin-right: 125px;
+    top: 150px;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    z-index: 1;
+}
+
+.perfil1{
+    position: absolute;
+    width: 135.43px;
+    height: 135.43px;
+    margin-left: 125px;
+    margin-right: 125px;
+    top: 150px;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    z-index: 1;
+    border-radius: 70px;
+}
+
+.nbat{
+    position: absolute;
+    width: 137.69px;
+    height: 39.5px;
+    left: 142px;
+    top: 270px;
+    font-family: 'Roboto', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 35px;
+    display: flex;
+    align-items: flex-end;
+    text-align: center;
+    color: #000000;
+}
+
+.naler{
+    position: absolute;
+    width: 137.69px;
+    height: 39.5px;
+    left: 142px;
+    top: 270px;
+    font-family: 'roboto', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 35px;
+    display: flex;
+    align-items: flex-end;
+    text-align: center;
+    color: #000000;
+}
+
+.descbat{
+    position: absolute;
+    width: 301.33px;
+    height: 127.53px;
+    left: 40px;
+    top: 330px;
+    font-family: 'Roboto', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    text-align: center;
+    color: #000000;
+}
+
+.descale{
+    position: absolute;
+    width: 301.33px;
+    height: 127.53px;
+    left: 40px;
+    top: 330px;
+    font-family: 'roboto', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    text-align: center;
+    color: #000000;
+}
+
+.vermais{
+    position: absolute;
+    width: 145.34px;
+    height: 54.76px;
+    left: 125px;
+    top: 520px;
+    background: #00669F;
+    cursor: pointer;
+}
+
+.vermais1{
+    position: absolute;
+    width: 145.34px;
+    height: 54.76px;
+    left: 125px;
+    top: 520px;
+    background: #00669F;
+    cursor: pointer;
 }
 
 .alerquina{
     position: absolute;
-    width: 374px;
-    height: 597.01px;
+    width: 380px;
+    height: 600px;
     left: 572px;
-    top: 223.99px;
+    top: 20px;
 
 }
 
 .batman{
     position: absolute;
-    width: 374px;
-    height: 597.01px;
-    left: 112px;
-    top: 223.99px;
+    width: 380px;
+    height: 600px;
+    left: 20px;
+    top: 20px;
 
 }
 
 .footer{
     position: absolute;
+    display: flex;
+    align-items: center;
     width: 100%;
     height: 8%;
-    left: 0px;
-    top: 972px;
+    left: 5px;
+    top: 1050px;
     background: #1CD1B0;
+}
+
+.pfooter{
+    position: absolute;
+    left: 20px;
 }
